			   XPCE ChangeLog
			   ==============

VERSION 5.1.7
=============

* FIXED: Possible loop in repaint of rounded buttons in X11 version.
	
* FIXED: Image scaling and rotation in 24-bit colourmode for the X11
  version (memory corruption).

* ADDED: X11 Client-side DragAndDrop supporting `window->drop_files'
  compatible to the MS-Windows version based on the XDND protocol.
  Tested with xftree as server.

* FIXED: get(@finder, file, @off, ...) not to return the obtainer.
  (Anjo Anjewierden).

* ADDED: <-read_as_file and<-size_as_file to class char_array, so
  atoms and strings can be opened as a Prolog stream using pce_open.

* FIXED: permission-checking when opening an object from read in
  pce_open/3, so atoms can be opened for reading.


VERSION 5.1.6
=============

* PORT: Various issues to make the system compile and run on the
  INTEL Itanium (Merced) processor using gcc and Linux.  Thanks to
  the SuSE team for providing access to their hardware.  The most
  important patch affects all hardware where int passed different
  to an `stdarg' function as void*.
  
* FIXED: Removed incomplete reference to library('overview.hlp').

* FIXED: Stop combobox browser from scrolling after a loc-still.

* UI: PceEmacs: swapped ok/cancel buttons in M-x argument prompter.

* PORT: By default disabled non-functioning C++ interface.

* FIXED: httpd: do www_form_encode/2 on the <-path of the request to
  decode it.  This fixes the hierarchy window of the online XPCE
  maual for Mozilla (Netscape 6).

* FIXED: httpd: automatic generation of the image-map for devices.

* FIXED: Properly shutdown *and* close a socket to really free the
  file-descriptor (Unix).  Especially required for the httpd library.


VERSION 5.1.5
=============

* ADDED: Allow controlling the frame<->colour_map through a class-variable.

* ADDED: Honour `verbose' prolog flag to suppress the banner if this flag
  is `silent'.

* FIXED: sh script error in FN script, making build fail on many Unix